# devbot

./: .gitignore  Cargo.toml  README.md
data/static/: build.sql
src/: config.rs  db.rs  framework.rs  hub.rs  main.rs
src/commands/: config.rs  meta.rs  mod.rs  moderator.rs
src/extensions/: error.rs  hub.rs  logging.rs  mod.rs
src/macros/: commands.rs
src/utils/: checks.rs  chron.rs  mod.rs  string.rs
