[package]
name = "devbot"
version = "2.0.0"
authors = ["MrDogeBro <MrDogeBro@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1"
dotenv = "0.15.0"

[dependencies.poise]
#git = "https://github.com/kangalioo/poise"
git = "https://github.com/vicky5124/poise"
branch = "components_pls"

[dependencies.uuid]
version = "0.8"
features = ["v4"]
