[package]
name = "devbot"
version = "2.0.0-alpha.0"
authors = ["MrDogeBro <MrDogeBro@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
serde_json = "1"
dotenv = "0.15"
chrono = "0.4"
toml = "0.5"
regex = "1"
tokio-postgres = "0.7"

[dependencies.poise]
git = "https://github.com/kangalioo/poise"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "utils", "rustls_backend", "unstable_discord_api", "collector"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.phf]
version = "0.10"
features = ["macros"]
